--- a/.github/workflows/minikube.yaml
+++ b/.github/workflows/minikube.yaml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     name: deploy to minikube
     steps:
-    - uses: actions/checkout@v2
+    - name: checkout
+      uses: actions/checkout@v2
     - name: Start minikube
       uses: medyagh/setup-minikube@master
     - name: checkinfo
@@ -23,7 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     name: deploy to KinD
     steps:
-    - uses: actions/checkout@v2
+    - name: checkout
+      uses: actions/checkout@v2
     - name: Start KinD
     - uses: engineerd/setup-kind@v0.5.0
     - name: checkinfo
