--- a/.github/workflows/minikube.yaml
+++ b/.github/workflows/minikube.yaml
@@ -24,6 +24,8 @@ jobs:
     steps:
     - name: Start KinD
       uses: engineerd/setup-kind@v0.5.0
+      with:
+        version: "v0.17.0"
     - name: checkinfo
       run: |
        echo "This cluster have $(kubectl get pods -A) node(s)" >> output_kind.log
